[package]
name = "launch-services"
version = "0.0.1"
description = "An incomplete wrapper for Launch Services of Core Services framework (macOS)."
homepage = "https://github.com/shurizzle/rust-launch-services"
repository = "https://github.com/shurizzle/rust-launch-services"
license-file = "LICENSE"
authors = ["Domenico Shura <shura1991@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2.58"
core-foundation = "0.6.4"
core-foundation-sys = "0.6.2"
bitflags = "1.1.0"
